# LernenC

./: .gitignore  README.md
Area_Circumference/: input.txt  input_result.txt
Area_Circumference/src/: Area_Circumference.code-workspace  input.csv  main.c
casino/: CMakeLists.txt  casino.code-workspace
casino/lib/: util.cpp  util.hpp
casino/src/: main.cpp
dhello/: CMakeLists.txt
dhello/test/: 001-TestCase.cpp
easypeasy/: CMakeLists.txt  CMakeLists1.txt  Edit.txt  test.txt  test1.txt
easypeasy/lib/: factorial.cpp  factorial.hpp  util.hpp
easypeasy/src/: main.cpp
easypeasy/test/: 001_TEST_CASE.cpp
helloworld/: Makefile
template/: CMakeLists.txt
template/lib/: util.cpp
template/src/: main.cpp
