cmake_minimum_required(VERSION 3.0.0)
project(notsoeasy VERSION 0.1.0)

include(CTest)
enable_testing()
set (MAIN "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
add_executable(ep ${MAIN})
message(STATUS "MAIN=${MAIN}")
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
